force-app/main/default/objects/Insurance_Policy__c/Insurance_Policy__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Insurance Policy.</description>
    <label>Insurance Policy</label>
    <nameField>
        <label>Policy Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Policies</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>