force-app/main/default/objects/Insurance_Policy__c/validationRules/insurance_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>insurance_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Valid_To__c &lt;= Valid_From__c</errorConditionFormula>
    <errorDisplayField>Valid_To__c</errorDisplayField>
    <errorMessage>Valid To cant be less than Valid from</errorMessage>
</ValidationRule>